--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Begin Container -->
   <div class="container d-flex justify-content-center mt-5">
-    <div id = "bio-card" class="card">
+    <div id="bio-card" class="card">
 
       <!-- Heading -->
       <div class="row mt-3 justify-content-center">
@@ -33,7 +33,7 @@
 
           <!-- Image column -->
           <div class="text-center col-md-6">
-            <img id= "profile-pic" src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
+            <img id="profile-pic" src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
             <br><br><br>
           </div>
 
@@ -56,21 +56,20 @@
         <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
         <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
           class="fa fa-linkedin fa-2x"></a>
-
-        <a href="mailto:m.alsham627@gmail.com" class="fa fa-envelope fa-2x"></a>
-
-        <a id="call-me" href="tel:623-363-5283" class="fa fa-phone fa-2x"></a>
       </div>
 
       <!-- Work and resume  -->
-      <div class = "row justify-content-center">
+      <div class="row justify-content-center">
         <div class="alert border-0" role="alert">
 
           <!-- directs to Github projects / work page-->
-          <a href="work.html" class="alert-link">WORK</a> 
-          · 
+          <a href="work.html" class="alert-link">WORK</a>
+          ·
           <!-- Download Resume -->
           <a href="MostafaAlshammaryResume.pdf" target="_blank" class="alert-link" download>RESUME</a>
+          ·
+          <!-- Contact page -->
+          <a href="contact.html" target="_blank" class="alert-link" download>CONTACT</a>
 
         </div>
       </div>
