--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
                     <a href="index.html" class="go-back ml-3">Go Back</a>
                 </div>
             </div>
-            
+
             <!-- Heading -->
             <div class="row mt-3 justify-content-center">
                 <div class="col text-center">
@@ -42,26 +42,53 @@
 
             <div class="row mx-3 my-3 justify-content-center">
 
-                <!-- Weather Dashboard section -->
-                <div class="text-center col-md-6">
-                    <h5>
-                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather Dashboard</a>
-                    </h5>
-                    <br>
-                    <a href="https://malsham3.github.io/weather-dashboard/" target="_blank">
-                        <img src="images/weather-dashboard-screenshot.png" alt="Weather Dashboard" class="card-img">
+                <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-interval="false">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Actual slides -->
+                    <div class="carousel-inner">
+
+                        <!-- First project -->
+                        <div class="carousel-item active">
+                            <img src="gifs/employee-tracker.gif" class="d-block w-100" alt="Employee-tracker">
+                            <div class="carousel-caption d-none d-md-block">
+                                <a id = "project-link" href="https://github.com/Malsham3/employee-tracker" target="_blank">Employee Tracker</a>
+                                <p>Staff management CLI application.</p>
+                            </div>
+                        </div>
+
+                        <!-- Second project -->
+                        <div class="carousel-item">
+                            <img src="gifs/note-taker.gif" class="d-block w-100" alt="Note-taker">
+                            <div id = "projects" class="carousel-caption d-none d-md-block">
+                                <a id = "projects-link" href="https://github.com/Malsham3/note-taker" target="_blank">Note Taker</a>
+                                <p id = "project-desc">Write notes on the go, and access them later!</p>
+                            </div>
+                        </div>
+
+                        <!-- Third project -->
+                        <div class="carousel-item">
+                            <img src="gifs/twitchclips.gif" class="d-block w-100" alt="Twitch-Clips">
+                            <div id = "projects" class="carousel-caption d-none d-md-block">
+                                <a id = "projects-link" href="https://github.com/eriklowrance/Project-TwitchClips" target="_blank">Twitch Clips</a>
+                                <p id = "project-desc" >Sign up, Login, search your favorite game or streamer and save your favorite clips!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Buttons -->
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
                     </a>
-                </div>
-
-                <!-- Automate section-->
-                <div class="text-center col-md-6">
-                    <h5>
-                        <a href="https://github.com/Malsham3/auto-mate" target="_blank" class="repo">Automate</a>
-                    </h5>
-
-                    <br>
-                    <a href="https://malsham3.github.io/auto-mate/" target="_blank">
-                        <img id="work" src="images/automate-screenshot.png" alt="Automate" class="card-img">
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
@@ -69,8 +96,7 @@
             <!-- guide instructions -->
             <div class="row mx-3 my-3 alert-link">
                 <div class="col">
-                    <p>· Click on name to be directed to project's Github repository </p>
-                    <p>· Click on image to be directed to project's deployed application</p>
+                    <p>· Click on the name of the project to be directed to it's Github repository </p>
                 </div>
             </div>
         </div>
